@@ -5,6 +5,7 @@ Linux 2.2.xx ELF note warning removed
 only show IO-wait on recent kernels
 fix top's SMP stats
 fix top for "dumb" and "vt510" terminals
+in top, limit the priority values to -99 ... 99
 
 procps-3.0.2 --> procps-3.0.3
 
